# mini-godot

./: Cargo.toml  README.md
assets/: shader.wgsl
crates/mini-core/: Cargo.toml
crates/mini-core/macros/: Cargo.toml
crates/mini-core/macros/src/: deref.rs  deref_mut.rs  enum_variant_meta.rs  lib.rs
crates/mini-core/src/: future.rs  lib.rs  node.rs  time_to_live.rs  utils.rs
crates/mini-core/src/type_uuid/: mod.rs  std_impl.rs
crates/mini-engine/: Cargo.toml
crates/mini-engine/src/: engine.rs  lib.rs  main.rs  node.rs  object.rs  shader.wgsl
crates/mini-engine/src/engine/: engine.rs  mod.rs
crates/mini-engine/src/engine/executor/: mod.rs  winit_impl.rs
crates/mini-engine/src/renderer/: graphics_context.rs  mod.rs  surface_data.rs
crates/mini-engine/src/renderer/renderer/: mod.rs  render_device.rs  renderer.rs  wgpu_impl.rs
crates/mini-engine/src/renderer/texture/: image.rs  image_loader.rs
crates/mini-engine/src/renderer/wrapper/: wrapper.rs
crates/mini-engine/src/resource/: mod.rs
crates/mini-engine/src/resource/image/: mod.rs
crates/mini-engine/src/scene/: material.rs  mod.rs  node.rs  object.rs
crates/mini-engine/src/scene/mesh/: mod.rs
crates/mini-engine/src/scene/mesh/mesh/: mesh.rs
crates/mini-renderer/: Cargo.toml
crates/mini-renderer/src/: graphics_context.rs  lib.rs  surface_data.rs
crates/mini-renderer/src/cache/: mod.rs  shader.rs  temporary_cache.rs
crates/mini-renderer/src/mesh/: mod.rs
crates/mini-renderer/src/mesh/mesh/: layout.rs  mesh.rs  mod.rs
crates/mini-renderer/src/render_resource/: pipeline.rs
crates/mini-renderer/src/renderer/: mod.rs  render_device.rs  renderer.rs  wgpu_impl.rs
crates/mini-renderer/src/shader/: cache.rs  loader.rs  mod.rs  shader.rs
crates/mini-renderer/src/texture/: image.rs  image_loader.rs  mod.rs
crates/mini-renderer/src/wrapper/: mod.rs  wgpu_impl.rs
examples/: demo.rs
(+48 files in other folders)
