[package]
name = "mini-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-core = { path = "../mini-core" }
mini-resource = { path = "../mini-resource" }
mini-task = { path = "../mini-task" }
mini-window = { path = "../mini-window" }
mini-winit = { path = "../mini-winit" }
mini-renderer = { path = "../mini-renderer" }


image = { version = "0.25" }
