[package]
name = "mini-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-core = { path = "../mini-core" }
mini-resource = { path = "../mini-resource" }
mini-window = { path = "../mini-window" }
wgpu = { version = "22.0" }
image = { version = "0.25" }
naga_oil = "0.14"
naga = { version = "22.1" }
